# homepage-ocaml

./: .dockerignore  .ocamlformat  Dockerfile  README.md  deploy.sh  docker-compose.yml  dune  dune-project  example.env  homepage.ml  homepage.opam  local.Dockerfile  watch.sh
db/: conn.ml  conn.mli  db.ml  dune  row.ml  row.mli
db/cli/: create_new_migration.ml  init_migrations_table.ml  migrate_down.ml  migrate_up.ml
db/migrations/: 2026_01_09_create_posts_table.sql
db/models/: migration.ml  migration.mli
dune.lock/: bstr.0.0.3.pkg  conf-libev.pkg  conf-postgresql.2.pkg  conf-postgresql.pkg  dream-html.3.11.2.pkg  dream-html.pkg  dune-configurator.3.21.0.pkg  dune-configurator.pkg  dune-private-libs.3.21.0.pkg  dune-private-libs.pkg  dune-site.3.21.0.pkg  dune-site.pkg  dyn.3.21.0.pkg  dyn.pkg  fs-io.3.21.0.pkg  fs-io.pkg  lock.dune  logs.pkg  lwt_ppx.5.9.2.pkg  multipart_form-lwt.0.7.0.pkg  multipart_form.0.7.0.pkg  omd.pkg  ordering.3.21.0.pkg  postgresql.5.3.2.pkg  postgresql.pkg  pure-html.3.11.2.pkg  pure-html.pkg  stdune.3.21.0.pkg  top-closure.pkg  uucp.pkg  uunf.pkg
migrations/: 202601181541_asdf.sql  202601191635_asdfasdfadsf.sql  202601192123_create_users_table.down.sql  202601192123_create_users_table.up.sql
static/assets/: app.css
